파일 정리 및 GitHub 푸시 준비
변경사항:
1. 대용량 파일 archived/ 폴더로 이동
   - embeddings_test_bgem3_optimized.pkl (1.3GB)
   - elasticsearch-8.8.0-linux-x86_64.tar.gz (569MB)
   - embeddings_test.pkl (32MB)
   - embeddings_test_bgem3.pkl (8.6MB)
   - document_embeddings.npy (13MB)

2. 이전 제출 파일 정리
   - 73개 CSV 파일 → archived/submissions/
   - 최종 제출 파일만 유지: cascaded_reranking_v1_full_submission_20251124_111913.csv

3. 실험 스크립트 정리
   - 20개 실험/테스트 Python 파일 → archived/experiments/

4. .gitignore 업데이트
   - archived/ 폴더 제외
   - *.pkl, *.npy, *.tar.gz 파일 제외
   - 최종 제출 CSV만 허용

GitHub 100MB 파일 크기 제한 문제 해결.

--- a/code/.gitignore
+++ b/code/.gitignore
@@ -38,9 +38,23 @@ env/
 *.swo
 *~
 
+# Archived files and experiments
+archived/
+
+# Large binary files
+*.pkl
+*.npy
+*.tar.gz
+code.tar.gz
+data.tar.gz
+
 # Output files
 sample_submission.csv
 *.csv
+!cascaded_reranking_v1_full_submission_*.csv
+
+# Logs
+*.log
 
 # OS
 .DS_Store
